bringing in the backend seeds to frontend

--- a/src/js/views/users/index.html
+++ b/src/js/views/users/index.html
@@ -1,4 +1,4 @@
-<h1>Users</h1>
+<h1>{{ user.user_name }}'s Profile</h1>
 <div class="media" ng-repeat="user in usersIndex.users">
   <div class="media-left">
     <a ui-sref="#">
@@ -6,7 +6,7 @@
     </a>
   </div>
   <div class="media-body">
-    <h4 class="media-heading">{{ user.username }}</h4>
+    <h4 class="media-heading">{{ user.user_name }}</h4>
     <p>{{ user.email }}</p>
   </div>
 </div>
