queens and season index page seeding is working and a bit of css

--- a/src/js/views/seasons/index.html
+++ b/src/js/views/seasons/index.html
@@ -1,14 +1,10 @@
-<h1>seasons</h1>
+<!-- <h1>seasons</h1> -->
 <ul>
   <li ng-repeat="season in seasonsIndex.seasons track by $index">
     <ul>
-      <li>{{ season.title}}</li>
-      <li>{{ season.description}}</li>
-      <li><img src="{{season.image}}"> </li>
+      <!-- <li>{{ season.title}}</li>
+      <li>{{ season.description}}</li> -->
+      <li><img class="seasonImg" ng-src="{{season.image}}"></li>
     </ul>
   </li>
 </ul>
-
-<img class="group-image" src="{{ group.image }}">
-
-{{ season.image}}
