--- a/src/js/views/queens/index.html
+++ b/src/js/views/queens/index.html
@@ -1,15 +1,14 @@
 <h1>Queens</h1>
 <li ng-repeat="queen in queensIndex.queens track by $index">
   <ul>
-    <li>{{ queen.s7}}</li>
+   <!-- <li>{{ queen.s7}}</li>
     <li>{{ queen.first_name}}</li>
-    <li>{{ queen.last_name}}</li>
-    <li>{{ queen.drag_name}}</li>
-    <li>{{ queen.bio}}</li>
-    <li>{{ queen.website}}</li>
-    <li>{{ queen.instagram}}</li>
-    <li>{{ queen.twitter}}</li>
-    <li><img src="{{season.image}}"> </li>
+    <li>{{ queen.last_name}}</li> -->
+    <!-- <li>{{ queen.drag_name}}</li> -->
+    <!-- <li>{{ queen.bio}}</li> -->
+    <li><img class="queenIndexImg" ng-src="{{queen.image}}"></li>
+    <!-- <li>{{ queen.instagram}}</li>
+    <li>{{ queen.twitter}}</li> -->
   </ul>
 </li>
 </ul>
