--- a/src/js/views/home.html
+++ b/src/js/views/home.html
@@ -1,1 +1,12 @@
-<h1>Home100</h1>
+<h1>Drag Race Index Page</h1>
+
+
+<img class="indexSeasonImg" src="images/index-page-season-img.png">
+<div class="seasonPara"><p>Seasons</p></div>
+
+<!-- <div class="container">
+  <img class="indexSeasonImg" src="images/index-page-season-img.png">
+  <div class="overlay">
+    <div class="text">Hello World</div>
+  </div>
+</div> -->
