--- a/src/js/views/queens/index.html
+++ b/src/js/views/queens/index.html
@@ -1,7 +1,11 @@
-<h1>Queens</h1>
+<!-- <h1>Queens</h1> -->
+<nav class="breadcrumb">
+  <a class="breadcrumb-item" href="home">Home /</a>
+  <a class="breadcrumb-item" href="seasons">Queens</a>
+</nav>
 <li ng-repeat="queen in queensIndex.queens track by $index">
   <ul>
-   <!-- <li>{{ queen.s7}}</li>
+    <!-- <li>{{ queen.s7}}</li>
     <li>{{ queen.first_name}}</li>
     <li>{{ queen.last_name}}</li> -->
     <!-- <li>{{ queen.drag_name}}</li> -->
