--- a/src/js/views/seasons/index.html
+++ b/src/js/views/seasons/index.html
@@ -1,4 +1,9 @@
 <!-- <h1>seasons</h1> -->
+
+<nav class="breadcrumb">
+  <a class="breadcrumb-item" href="home">Home /</a>
+  <a class="breadcrumb-item" href="seasons">Season</a>
+</nav>
 <ul>
   <li ng-repeat="season in seasonsIndex.seasons track by $index">
     <ul>
