--- a/src/js/views/home.html
+++ b/src/js/views/home.html
@@ -1,12 +1,15 @@
 <h1>Drag Race Index Page</h1>
 
-
-<img class="indexSeasonImg" src="images/index-page-season-img.png">
-<div class="seasonPara"><p>Seasons</p></div>
-
-<!-- <div class="container">
+<div class="containerSeasonImg">
   <img class="indexSeasonImg" src="images/index-page-season-img.png">
   <div class="overlay">
-    <div class="text">Hello World</div>
+    <div class="overlayIndexText"><h1><a href="seasons"> Search the Drag Seasons</a></h1></div>
+    </div>
   </div>
-</div> -->
+
+  <div class="containerQueenImg">
+    <img class="indexQueenImg" src="images/Alaska.png">
+    <div class="queenIndexOverlay">
+      <div class="queenIndexOverlayText"><h1><a href="queens"> Search the Queens</a></h1></div>
+    </div>
+  </div>
