--- a/src/js/views/queens/index.html
+++ b/src/js/views/queens/index.html
@@ -1,4 +1,7 @@
 <!-- <h1>Queens</h1> -->
+<form id="searchBar">
+  <input type="search" placeholder="Search The Queens">
+</form>
 <nav class="breadcrumb">
   <a class="breadcrumb-item" href="home">Home /</a>
   <a class="breadcrumb-item" href="seasons">Queens</a>
