loads of styling

--- a/src/js/views/home.html
+++ b/src/js/views/home.html
@@ -1,4 +1,15 @@
-<h1>Drag Race Index Page</h1>
+<div class="regLog">
+  <li class="Reg" ng-hide="main.user">
+  <a ui-sref="register">Register</a>
+  </li>
+  <li class="Log" ng-hide="main.user">
+  <a ui-sref="login">Sign Up</a>
+  </li>
+</div>
+
+
+<h1>Welcom to Drag Race</h1>
+
 
 <div class="containerSeasonImg">
   <img class="indexSeasonImg" src="images/index-page-season-img.png">
