--- a/src/scss/_seasons_index.scss
+++ b/src/scss/_seasons_index.scss
@@ -5,3 +5,9 @@
   margin-bottom: 50px;
   float: left;
 }
+
+.seasonTitle {
+  // background-color: rgba(255, 63, 210, 0.9);
+  color: black;
+  text-align: center;
+}
