--- a/src/scss/_drag_race_index.scss
+++ b/src/scss/_drag_race_index.scss
@@ -2,10 +2,12 @@
   width: 100%;
   border: 2px solid #ff3fd2;
   display: block;
+  border-radius: 106px;
 }
 
 .containerSeasonImg {
   position: relative;
+  border-radius: 106px;
 }
 
 .overlay {
@@ -17,11 +19,13 @@
     overflow: hidden;
     width: 1139px;
     height: 90px;
+    border-radius: 106px;
     transition: .5s ease;
 }
 
 .containerSeasonImg:hover .overlay {
   height: 100%;
+  border-radius: 106px;
 }
 
 .overlayIndexText {
@@ -31,6 +35,7 @@
   position: absolute;
   overflow: hidden;
   text-align: right;
+  border-radius: 106px;
   top: 40%;
   left: 20%;
   transform: translate(-50%, -50%);
