--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,4 @@
+@import 'simple-grid';
 @import 'drag_race_index';
 @import 'queens_index';
 @import 'seasons_index';
@@ -6,6 +7,7 @@
 @import 'typography';
 @import 'nav';
 @import 'search';
+@import 'season_show';
 
 
 .rupaul {
