--- a/src/js/views/seasons/index.html
+++ b/src/js/views/seasons/index.html
@@ -7,7 +7,7 @@
 <ul>
   <li ng-repeat="season in seasonsIndex.seasons track by $index">
     <ul>
-      <li><img class="seasonImg" ng-src="{{season.image}}"></li>
+      <li><a ui-sref="seasonsShow({ id: season.id })"><img class="seasonImg" ng-src="{{season.image}}"></a></li>
       <li><h1 class="seasonTitle">{{ season.title }}</h1></li>
     </ul>
   </li>
