--- a/src/scss/_drag_race_index.scss
+++ b/src/scss/_drag_race_index.scss
@@ -2,12 +2,12 @@
   width: 100%;
   border: 2px solid #ff3fd2;
   display: block;
-  border-radius: 106px;
+  // border-radius: 106px;
 }
 
 .containerSeasonImg {
   position: relative;
-  border-radius: 106px;
+  // border-radius: 106px;
 }
 
 .overlay {
@@ -17,15 +17,15 @@
     /* right: 0; */
     background-color: rgba(255, 63, 210, 0.9);
     overflow: hidden;
-    width: 1139px;
+    width: 100%;
     height: 90px;
-    border-radius: 106px;
+    // border-radius: 106px;
     transition: .5s ease;
 }
 
 .containerSeasonImg:hover .overlay {
   height: 100%;
-  border-radius: 106px;
+  // border-radius: 106px;
 }
 
 .overlayIndexText {
@@ -35,26 +35,13 @@
   position: absolute;
   overflow: hidden;
   text-align: right;
-  border-radius: 106px;
+  // border-radius: 106px;
   top: 40%;
-  left: 20%;
+  left: 23%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
 }
-
-// .overlayIndexPara {
-//   white-space: nowrap;
-//   color: white;
-//   font-size: 20px;
-//   position: absolute;
-//   overflow: hidden;
-//   text-align: right;
-//   top: 15%;
-//   left: 50%;
-//   transform: translate(-50%, -50%);
-//   -ms-transform: translate(-50%, -50%);
-// }
-
+// ********* Search The Queens ***********
 .indexQueenImg {
   border: 2px solid #ff3fd2;
   margin-top: 10px;
@@ -98,4 +85,10 @@
 a {
   color: white !important;
   text-decoration: none !important;
+}
+
+// Grid
+.indexSeasonImgcontainer {
+  width: 120%;
+  margin-left: -90px;
 }
