--- a/src/js/views/home.html
+++ b/src/js/views/home.html
@@ -1,53 +1,38 @@
-<!-- <div class="regLog">
+<div class="regLog">
   <li class="Reg" ng-hide="main.user">
-  <a ui-sref="register">Register</a>
+    <a ui-sref="register">Register</a>
   </li>
   <li class="Log" ng-hide="main.user">
-  <a ui-sref="login">Sign Up</a>
+    <a ui-sref="login">Sign Up</a>
   </li>
-</div> -->
+</div>
 
 
 <h1>Welcom to Drag Race</h1>
 
-
-<!-- <div class="containerSeasonImg">
+<div class="containerSeasonImg">
   <img class="indexSeasonImg" src="images/index-page-season-img.png">
   <div class="overlay">
     <div class="overlayIndexText"><h1><a href="seasons"> Search the Drag Seasons</a></h1></div>
-    </div>
-  </div> -->
-
-  <div class="indexSeasonImgcontainer">
-  <div class="row">
-    <div class="col-12">
-      <div class="containerSeasonImg">
-        <img class="indexSeasonImg" src="images/index-page-season-img.png">
-        <div class="overlay">
-          <div class="overlayIndexText"><h1><a href="seasons"> Search the Drag Seasons</a></h1></div>
-          </div>
-        </div>
-    </div>
   </div>
 </div>
-
-<div class="container">
-  <div class="row">
-    <div class="col-6">
-      <div class="containerQueenImg">
-        <img class="indexQueenImg" src="images/Alaska.png">
-        <div class="queenIndexOverlay">
-          <div class="queenIndexOverlayText"><h1><a href="queens"> Search the Queens</a></h1></div>
-        </div>
-      </div>
-    </div>
-    <div class="col-6">
-      <div class="containerQueenImg">
-        <img class="indexQueenImg" src="images/Alaska.png">
-        <div class="queenIndexOverlay">
-          <div class="queenIndexOverlayText"><h1><a href="queens"> Search the Queens</a></h1></div>
-        </div>
-      </div>
-    </div>
+<div class="grades">
+  <div class="desktopGrades desktopGrades1">
+    <img class="indexQueenImg" src="images/Alaska.png">
+  </div>
+  <div class="desktopGrades desktopGrades2">
+    <img class="indexQueenImg" src="images/Alaska.png">
+  </div>
+  <div class="desktopGrades desktopGrades3">
+    <img class="indexQueenImg" src="images/Alaska.png">
+  </div>
+  <div class="desktopGrades desktopGrades4">
+    <img class="indexQueenImg" src="images/Alaska.png">
   </div>
 </div>
+<!-- <div class="containerQueenImg">
+  <img class="indexQueenImg" src="images/Alaska.png">
+  <div class="queenIndexOverlay">
+    <div class="queenIndexOverlayText"><h1><a href="queens"> Search the Queens</a></h1></div>
+  </div>
+</div> -->
