--- a/src/js/views/seasons/show.html
+++ b/src/js/views/seasons/show.html
@@ -7,7 +7,7 @@
 <h1>{{ seasonsShow.season.title }}</h1>
 
 <ul>
-  <li><a ui-sref="seasonsShow({ id: season.id })"><img class="seasonImg" ng-src="{{season.image}}"></a></li>
+  <li><p>{{ seasonsShow.season.description}}</p></li>
   <h2>Queens</h2>
   <li ng-repeat="queen in seasonsShow.season.queens track by $index">
     <img class="queenShowImg" ng-src="{{queen.image}}"<a ui-sref="queensShow({ id: queen.id })"></a>
