styled season show page

--- a/src/js/views/home.html
+++ b/src/js/views/home.html
@@ -7,8 +7,10 @@
   </li>
 </div>
 
-
-<h1>Welcom to Drag Race</h1>
+<br>
+<br>
+<br>
+<!-- <h1>Welcom to Drag Race</h1> -->
 
 <div class="containerSeasonImg">
   <img class="indexSeasonImg" src="images/index-page-season-img.png">
@@ -17,9 +19,9 @@
   </div>
 </div>
 <div class="grades">
-  <div class="desktopGrades desktopGrades1">
-    <img class="indexQueenImg" src="images/Alaska.png">
-  </div>
+    <div class="desktopGrades desktopGrades1">
+      <img class="indexQueenImg" src="images/Alaska.png">
+      </div>
   <div class="desktopGrades desktopGrades2">
     <img class="indexQueenImg" src="images/Alaska.png">
   </div>
@@ -31,8 +33,8 @@
   </div>
 </div>
 <!-- <div class="containerQueenImg">
-  <img class="indexQueenImg" src="images/Alaska.png">
-  <div class="queenIndexOverlay">
-    <div class="queenIndexOverlayText"><h1><a href="queens"> Search the Queens</a></h1></div>
-  </div>
+<img class="indexQueenImg" src="images/Alaska.png">
+<div class="queenIndexOverlay">
+<div class="queenIndexOverlayText"><h1><a href="queens"> Search the Queens</a></h1></div>
+</div>
 </div> -->
