--- a/src/scss/_seasons_index.scss
+++ b/src/scss/_seasons_index.scss
@@ -11,3 +11,11 @@
   color: black;
   text-align: center;
 }
+
+.seasonShowQueenTitle {
+  margin-left: -40px;
+}
+
+.seasonShowQueens {
+  margin-left: 90px;
+}
