--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -20,6 +20,11 @@
 	font-style: normal;
 }
 
-h1, h4, h2 {
+h1, h4, h2, {
   font-family: 'Aviddyn';
+}
+
+p {
+  font-family: sans-serif;
+  font-size: 15px;
 }
