--- a/src/js/views/seasons/show.html
+++ b/src/js/views/seasons/show.html
@@ -1,7 +1,7 @@
 <nav class="breadcrumb">
   <a class="breadcrumb-item" href="home">Home /</a>
   <a class="breadcrumb-item" href="seasons">Seasons /</a>
-  <a class="breadcrumb-item" href="seasons">{{ seasonsShow.season.title }}</a>
+  <a class="breadcrumb-item" href="#">{{ queensShow.season.title }}</a>
 </nav>
 
 <h1>{{ seasonsShow.season.title }}</h1>
