--- a/src/js/views/login.html
+++ b/src/js/views/login.html
@@ -1,10 +1,11 @@
-<h1>Login</h1>
-<form ng-submit="login.login()">
+<h1 class="formTitle">Login into your Drag Race Account</h1>
+
+<form class="login" ng-submit="login.login()">
   <div class="form-group">
     <input class="form-control" type="email" name="email" ng-model="login.user.email" placeholder="Email">
   </div>
   <div class="form-group">
     <input class="form-control" type="password" name="password" ng-model="login.user.password" placeholder="Password">
   </div>
-  <input class="btn btn-primary" type="submit" value="Submit">
+  <input class="submitButton" type="submit" value="Submit">
 </form>
