--- a/src/js/views/register.html
+++ b/src/js/views/register.html
@@ -1,16 +1,14 @@
-<h1>Register</h1>
-<form ng-submit="register.register()">
+<h1 class="formTitle">Sign Up </h1>
+
+<form class="register" ng-submit="register.register()">
   <div class="form-group">
     <input class="form-control" type="text" name="username" ng-model="register.user.user_name" placeholder="Username">
   </div>
   <div class="form-group">
-    <input class="form-control" type="text" name="firstName" ng-model="register.user.first_name" placeholder="First name">
-  </div>
-  <div class="form-group">
-    <input class="form-control" type="text" name="lastName" ng-model="register.user.last_name" placeholder="Last name">
+    <input class="form-control" type="text" name="Name" ng-model="register.user.first_name" placeholder="Name">
   </div>
   <!-- <div class="form-group">
-    <input class="form-control" type="text" name="image" ng-model="register.user.image" placeholder="Image">
+    <input class="form-control" type="text" name="lastName" ng-model="register.user.last_name" placeholder="Last name">
   </div> -->
   <div class="form-group">
     <input class="form-control" type="email" name="email" ng-model="register.user.email" placeholder="Email">
@@ -21,5 +19,10 @@
   <div class="form-group">
     <input class="form-control" type="password" name="passwordConfirmation" ng-model="register.user.password_confirmation" placeholder="Password confirmation">
   </div>
-  <input class="btn btn-primary" type="submit" value="Submit" />
+  <input class="submitButton" type="submit" value="Submit" />
 </form>
+
+
+<!-- <div class="form-group">
+  <input class="form-control" type="text" name="image" ng-model="register.user.image" placeholder="Image">
+</div> -->
