--- a/src/js/views/home.html
+++ b/src/js/views/home.html
@@ -13,25 +13,31 @@
 <!-- <h1>Welcom to Drag Race</h1> -->
 
 <div class="containerSeasonImg">
-  <img class="indexSeasonImg" src="images/index-page-season-img.png">
+  <img class="indexSeasonImg" src="images/index-page-season-img.png"><a href="seasons"></a>
   <div class="overlay">
     <div class="overlayIndexText"><h1><a href="seasons"> Search the Drag Seasons</a></h1></div>
   </div>
 </div>
+
 <div class="grades">
-    <div class="desktopGrades desktopGrades1">
-      <img class="indexQueenImg" src="images/Alaska.png">
-      </div>
-  <div class="desktopGrades desktopGrades2">
-    <img class="indexQueenImg" src="images/Alaska.png">
+  <div class="desktopGrades desktopGrades1">
+    <img class="indexQueenImg" src="images/Alaska.png"><h1 class="searchTheQueens"><a href="queens"> Search The Queens</a></h1>
   </div>
+
+  <div class="desktopGrades desktopGrades2 ">
+    <img class="indexQueenImg" src="images/Alaska.png"><h1 class="dragQuotes">Drag Quotes</h1>
+  </div>
+
   <div class="desktopGrades desktopGrades3">
-    <img class="indexQueenImg" src="images/Alaska.png">
+    <img class="indexQueenImg" src="images/Alaska.png"><h1 class="dragVids">Drag Vids</h1>
   </div>
+
   <div class="desktopGrades desktopGrades4">
-    <img class="indexQueenImg" src="images/Alaska.png">
+    <img class="indexQueenImg" src="images/Alaska.png"><h1 class="dragGiphy">Drag Giphys</h1>
   </div>
 </div>
+
+
 <!-- <div class="containerQueenImg">
 <img class="indexQueenImg" src="images/Alaska.png">
 <div class="queenIndexOverlay">
