--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -28,22 +28,22 @@
   padding: 15px;
 }
 
-.regLog {
-  background-color: #FF3FD2;
-  display: -ms-flexbox;
-  display: flex;
-  float: right;
-  margin-right: -94px;
-  padding: 11px;
-  margin-top: -22px;
-  border: 1px solid white;
-  font-family: 'Aviddyn';
-  }
-
-.Reg {
-  padding-right: 20px;
-}
-
-.login {
-  padding-right: 10px;
-}
+// .regLog {
+//   background-color: #FF3FD2;
+//   display: -ms-flexbox;
+//   display: flex;
+//   float: right;
+//   margin-right: -94px;
+//   padding: 11px;
+//   margin-top: -22px;
+//   border: 1px solid white;
+//   font-family: 'Aviddyn';
+//   }
+//
+// .Reg {
+//   padding-right: 20px;
+// }
+//
+// .login {
+//   padding-right: 10px;
+// }
