--- a/src/js/views/home.html
+++ b/src/js/views/home.html
@@ -1,3 +1,8 @@
+<nav class="breadcrumb">
+  <a class="breadcrumb-item" href="home">Home /</a>
+</nav>
+
+
 <div class="regLog">
   <li class="Reg" ng-hide="main.user">
     <a ui-sref="register">Register</a>
@@ -15,16 +20,16 @@
 <div class="containerSeasonImg">
   <img class="indexSeasonImg" src="images/index-page-season-img.png"><a href="seasons"></a>
   <div class="overlay">
-    <div class="overlayIndexText"><h1><a href="seasons"> Search the Drag Seasons</a></h1></div>
+    <div class="seasonsIndexTitle"><h1><a href="seasons"> Drag Seasons</a></h1></div>
   </div>
 </div>
 
-<div class="grades">
+<!-- <div class="grades">
   <div class="desktopGrades desktopGrades1">
     <img class="indexQueenImg" src="images/Alaska.png"><h1 class="searchTheQueens"><a href="queens"> Search The Queens</a></h1>
-  </div>
+  </div> -->
 
-  <div class="desktopGrades desktopGrades2 ">
+  <!-- <div class="desktopGrades desktopGrades2 ">
     <img class="indexQueenImg" src="images/Alaska.png"><h1 class="dragQuotes">Drag Quotes</h1>
   </div>
 
@@ -35,12 +40,33 @@
   <div class="desktopGrades desktopGrades4">
     <img class="indexQueenImg" src="images/Alaska.png"><h1 class="dragGiphy">Drag Giphys</h1>
   </div>
-</div>
+</div> -->
 
 
-<!-- <div class="containerQueenImg">
+<div class="containerQueenImg">
 <img class="indexQueenImg" src="images/Alaska.png">
 <div class="queenIndexOverlay">
-<div class="queenIndexOverlayText"><h1><a href="queens"> Search the Queens</a></h1></div>
+<div class="queensIndexTitle"><h1><a href="queens"> Queens</a></h1></div>
 </div>
-</div> -->
+</div>
+
+<div class="containerQueenImg">
+<img class="indexQueenImg" src="images/index-page-season-img.png">
+<div class="queenIndexOverlay">
+<div class="queensIndexTitle"><h1><a href="giphy"> Drag Giphys</a></h1></div>
+</div>
+</div>
+
+<div class="containerQueenImg">
+<img class="indexQueenImg" src="images/Alaska.png">
+<div class="queenIndexOverlay">
+<div class="queensIndexTitle"><h1><a href="video"> Drag Vids</a></h1></div>
+</div>
+</div>
+
+<div class="containerQueenImg">
+<img class="indexQueenImg" src="images/index-page-season-img.png">
+<div class="queenIndexOverlay">
+<div class="queensIndexTitle"><h1><a href="queens"> Drag Quotes</a></h1></div>
+</div>
+</div>
