--- a/src/js/views/seasons/index.html
+++ b/src/js/views/seasons/index.html
@@ -1,9 +1,9 @@
-<!-- <h1>seasons</h1> -->
-
 <nav class="breadcrumb">
   <a class="breadcrumb-item" href="home">Home /</a>
   <a class="breadcrumb-item" href="seasons">Seasons</a>
 </nav>
+
+<!-- <h1>Seasons</h1> -->
 <ul>
   <li ng-repeat="season in seasonsIndex.seasons track by $index">
     <ul>
