--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -20,11 +20,12 @@
 	font-style: normal;
 }
 
-h1, h2, h3, h4 {
+
+h1, h2, h3, h4, {
   font-family: 'Aviddyn';
 }
 
 p {
-  font-family: sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 15px;
 }
